mv-3: getting the scrobbles from last.fm api